# trading_system

./: API_SETUP.md  DATABASE_COMPARISON.md  DEXIE_UPGRADE.md  README.md  SQLITE_INTEGRATION.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  main.rs
src/components/: DataManager.tsx  EconomicCalendar.tsx  MarketStructureAssessment.tsx  NewsEvents.tsx  PreTradeChecklist.tsx  TechnicalAnalysis.tsx  WeeklyPlanning.tsx
src/config/: api.ts
src/services/: economicApi.ts  newsApi.ts
src/utils/: apiTest.ts  database.ts  dexie-database.ts  dexie-test.ts  sqlite-database.ts  storage.ts  supabase-database.ts  tauri-database.ts  verify-data-saving.ts
